--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ aws_cdk.aws_ec2
 aws_cdk.aws_ecs
 aws_cdk.aws_ecs_patterns
 aws_cdk.aws_elasticloadbalancingv2
+aws_cdk.aws_certificatemanager
+aws_cdk.aws_route53
+aws_cdk.aws_efs
+aws_cdk.aws_logs
